# trab_cv_ufrn

CODE_TRAINING/training/classification/: train.py
CODE_TRAINING/training/detection/ssd/: labels.txt
CODE_TRAINING/training/detection/ssd/vision/datasets/: generate_vocdata.py
ROS/: README.md
ROS/usv_captain/ros_packages/: CMakeLists.txt  package.xml  plugins.xml
ROS/usv_captain/ros_packages/include/: usv_captain.h
ROS/usv_captain/ros_packages/launch/: gymkhana_custom.launch  usv_captain.launch
ROS/usv_captain/ros_packages/src/: usv_captain.cpp
